bug on mobile

--- a/src/styles/Biography.module.scss
+++ b/src/styles/Biography.module.scss
@@ -4,12 +4,11 @@
     align-content: center;
     align-items: center;
     height: calc(100vh - 135px);
-    overflow: auto;
     flex-direction: column;
 
     @media only screen and (max-width: 500px) {
         height: 100vh;
-        margin: 5rem 0 2rem 0;
+        padding: 5rem 0 2rem 0;
     }
 }
 
